1998-08-14  John R. Jackson  <jrj@purdue.edu>

	* configure.in (LFS): add code that might support configuring large
	files on HP-UX.

1998-09-10  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* server-src/conffile.c (dump_configuration): runspercycle is not a
 	member of dumptype_t
	(init_holdingdisk_defaults): init chunksize with documented default,
 	not -1, because it wouldn't be recalculated

	* docs/INSTALL: URL for SAMBA was broken; note about 1.9.18p10 bug

1998-09-10  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* docs/SAMBA: 1.9.18p10 has a bug

1998-09-09  Terje Malmedal  <tm@funcom.com>

	* common-src/stream.c (stream_server, stream_client): added
 	SO_KEEPALIVE option so we get an error if the other side crashes

1998-09-09  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* configure.in (CHIO): look for chio and AC_SUBST it
	(MT, CHS): if not found, use just the program name
	
1998-09-09  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/planner.c (last_level): return the last level
	even it is still on holding disk if reserve < 100.

1998-09-09  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* server-src/reporter.c (divzero, divzero_wide): print `#'s on
 	overflow

	* server-src/amtape.c (show_init): no longer print `scanning'
 	message
	(show_init_show, current_init_all): call show_init, then print the
 	appropriate `scanning' message
	Reported by David Wolfskill <dhw@whistle.com>

	* changer-src/chg-scsi.c (main): use new multi-configuration
	mechanism only if tape_device contains only a single digit

1998-09-08  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/planner.c (setup_estimate): Don't write a
	"mismatch: no tapelist record, but curinfo next_level0" message
	and force a level 0 when reserve < 100.

1998-09-08  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/holding.h (get_amanda_names): return a filetype_t
	instead of an int.
	* server-src/holding.c (get_amanda_names): return the filetype_t