@@ -17,7 +17,7 @@ $libexecdir="@libexecdir@";
 $USE_VERSION_SUFFIXES='@USE_VERSION_SUFFIXES@';
 $suf = '';
 if ( $USE_VERSION_SUFFIXES =~ /^yes$/i ) {
-        $suf='--@VERSION@';
+        $suf='-@VERSION@';
 }
 
 $result = &NGetOpt (	"summary","dumping|d",
@@ -44,7 +44,7 @@ else {
 }
 
 if ( ! -d "$confdir/$conf" ) {
-    print "amdump$SUF: could not find directory $confdir/$conf";
+    print "amdump$suf: could not find directory $confdir/$conf";
     exit 1;
 }
 
@@ -52,7 +52,7 @@ $pwd = `pwd`;
 chomp $pwd;
 chdir "$confdir/$conf";
 
-$logdir=`$libexecdir/getconf$SUF logdir`;
+$logdir=`$libexecdir/getconf$suf logdir`;
 chomp $logdir;
 $errfile="$logdir/amdump";
 
